--- a/scripts/install
+++ b/scripts/install
@@ -128,7 +128,7 @@ ynh_app_setting_set $app final_path $final_path
 # Download, check integrity, uncompress and patch the source from app.src
 ynh_setup_source "$final_path"
 
-cd domoticz-4.9700
+cd $final_path/domoticz-4.9700
 cmake -DCMAKE_BUILD_TYPE=Release CMakeLists.txt
 make -j 2
 
