Correction service systemd + droits domoticz + README

--- a/scripts/install
+++ b/scripts/install
@@ -172,6 +172,8 @@ ynh_system_user_create $app
 #=================================================
 # ...
 #=================================================
+# to access RFLink on USB port
+usermod -a -G dialout $app
 
 #=================================================
 # SETUP SYSTEMD
