--- a/scripts/install
+++ b/scripts/install
@@ -301,5 +301,6 @@ yunohost service add $app --log "/var/log/$app/APP.log"
 #=================================================
 # RELOAD NGINX
 #=================================================
-ynh_systemd_action -n domoticz -a restart
-systemctl reload nginx
+#ynh_systemd_action -n domoticz -a restart
+#systemctl reload nginx
+ynh_systemd_action --service_name=nginx --action=reload
